--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
+   <!-- <link
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+            href="https://fonts.googleapis.com/css?family=Inter:300,400,500,700&family=Roboto:300,400,500,700&display=swap"
+    />-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
