--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal portfolio site designed by Aamir."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Assets/Images/personal_logo3.png" />
     <!--
